fix: use our brand font on mobile

--- a/src/drive/mobile/styles/main.styl
+++ b/src/drive/mobile/styles/main.styl
@@ -1,3 +1,18 @@
 html {
     -webkit-user-select: none;
 }
+
+@font-face {
+    font-family: Lato;
+    font-style: normal;
+    font-weight: normal;
+    src:  url('../assets/fonts/Lato-Regular.woff2') format('woff2'),
+          url('../assets/fonts/Lato-Regular.woff') format('woff');
+}
+@font-face {
+    font-family: Lato;
+    font-style: normal;
+    font-weight: bold;
+    src:  url('../assets/fonts/Lato-Bold.woff2') format('woff2'),
+          url('../assets/fonts/Lato-Bold.woff') format('woff');
+}
